# egm96

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  generate-egm96-grid  pyproject.toml
.github/workflows/: ci.yaml
src/egm96/: __init__.py  _model.py
src/egm96/data/: __init__.py
tests/: test_undulation.py
