[project]
name = "egm96"
version = "0.3.0"
description = "EGM96 geoid undulations"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "egm96",
    "geoid",
    "undulation",
    "geodesy",
    "gps",
    "wgs84",
    "ellipsoid",
    "elevation",
    "altitude",
    "mean-sea-level",
]
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
authors = [
    { name = "Jonas Ehrlich", email = "jonas.ehrlich@xneural.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
]

[project.urls]
Repository = "https://github.com/xneural-org/egm96"
Issues = "https://github.com/xneural-org/egm96/issues"


[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# The grid is generated into the package dir (gitignored). Files under the
# module root are already included in the wheel; this also pulls it into the
# source distribution so `pip install` from sdist works too.
source-include = ["src/egm96/data/egm96-5.npz"]

[dependency-groups]
# pytest for the test suite; httpx + pygeodesy are only needed to (re)generate
# and validate the bundled grid via ./generate-egm96-grid.
dev = [
    "pytest>=9.1.1",
    "httpx>=0.28.1",
    "pygeodesy>=26.7.7",
    "ruff>=0.15.20",
    "ty>=0.0.57",
]

[tool.ruff]
line-length = 100
# The grid generator is an extensionless executable script, not a *.py file.
extend-include = ["generate-egm96-grid"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests", "generate-egm96-grid"]

[tool.ty.terminal]
# Treat every diagnostic, including warnings, as a hard failure.
error-on-warning = true
